--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,6 @@
 {{ define "footer" }}
 <p>
 Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a> og Petter Holstad. <br>
-<a href="../tilbakemeldinger">Tilbakemeldinger</a> • <a href="../finansiering">Gi et økonomisk bidrag</a> • <a href="../lisens">Lisens</a> • <a href="../kontaktinformasjon">Kontaktinformasjon</a>
+<a href="../tilbakemeldinger">Tilbakemeldinger</a> • <a href="../finansiering">Gi et økonomisk bidrag</a> • <a href="../lisens">Lisens</a> • <a href="../kontaktinfo">Kontaktinformasjon</a>
 </p>
 {{ end }}
