Oppdaterer stilarket for å støtte responsive bilder

--- a/static/style.css
+++ b/static/style.css
@@ -191,3 +191,8 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.responsive {
+  max-width: 60%;
+  height: auto;
+}
