--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,14 @@
 
 {{ define "footer" }}
 <p>
-Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a> og Petter Holstad. <br>
-<a href="../tilbakemeldinger">Tilbakemeldinger</a> • <a href="../finansiering">Gi et økonomisk bidrag</a> • <a href="../lisens">Lisens</a> • <a href="../kontaktinfo">Kontaktinformasjon</a>
+<p>
+<a href="../tilbakemeldinger">Gi en tilbakemelding</a> • 
+<a href="../finansiering">Støtt nettsiden</a><br>
+<a href="../personvern">Personvernserklæring</a> • 
+<a href="../lisens">Lisensier innhold</a> • 
+<a href="../kontaktinfo">Kontaktinformasjon</a>
+<br>Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a> med flere
+<br>Redaktør: Petter Dog Holstad
+</p>
 </p>
 {{ end }}
