--- a/layouts/shortcodes/podkastkort.html
+++ b/layouts/shortcodes/podkastkort.html
@@ -1,14 +1,15 @@
-<div class="w-auto p-3">
+<div id="podcast-card">
+<div class="podcast-card" data-category="{{ .Get "merkelapp" }}">
 <div class="card" style="width: 18rem;">
 <a href="{{ .Get "offisiell" }}" target="_blank">
   <img src="{{ .Get "src" }}" class="card-img-top" alt="{{ .Get "alt" }}">
   </a>
   <ul class="list-group list-group-flush">
     <li class="list-group-item"><h4>{{ .Get "header" }}</h4></li>
+    <li class="list-group-item">{{ .Inner }}</li>
     <li class="list-group-item">Publiseres av: {{ .Get "utgiver" }}</li>
     <li class="list-group-item">Utgivelse: {{ .Get "hyppighet" }}</li>
     <li class="list-group-item">Lengde: {{ .Get "varighet" }}</li>
-    <li class="list-group-item">{{ .Inner }}</li>
   </ul>
     <div class="card-footer text-muted">
     <a href="{{ .Get "offisiell" }}" class="card-link" target="_blank"><span class="text-dark">Offisielt nettsted <sup><i class="fas fa-external-link-alt"></i></sup></span></a>
@@ -18,13 +19,4 @@
   </div>  
 </div>
 </div>
-
-
-<!--
-<span class="badge bg-success text-white">Teknologi</span>
-<span class="badge bg-danger text-white">Nyheter</span>
-<span class="badge bg-primary text-white">Produktivitet</span>
-<span class="badge bg-info text-white">Gode historier</span>
-<span class="badge bg-warning text-white">Underholdning</span>
-<span class="badge bg-dark text-white">Video</span>-podkaster
--->
+</div>
