--- a/layouts/shortcodes/sort-boks.html
+++ b/layouts/shortcodes/sort-boks.html
@@ -1,14 +1,22 @@
-<!-- Denne boksen er utviklet til bruk på podkast.md som shortcode. Du må selv sette text-farven og bakgrunnen ved å legge til dette. To eksempler er text-white og text-dark og bg-dark og bg-secondary -->
-
-<div class="w-auto p-3">
-<div class="card {{ .Get "type" }} mb-3" style="max-width: 18rem;">
-  <img src="{{ .Get "src" }}" class="card-img-top" alt="{{ .Get "alt" }}">
-  <div class="card-header"><h4>{{ .Get "header" }}</h4></div>
-    <ul class="list-group {{ .Get "type" }} list-group-flush">
-    <li class="list-group-item {{ .Get "type" }}">{{ .Inner }}</li>
-  </ul>
-    <div class="card-footer text-muted">
-    <a href="{{ .Get "link" }}" class="card-link" target="_blank"><span class="text-white">{{ .Get "linkedtext" }} <i class="fas fa-external-link-alt"></i></span></a>
+  <div class="row">
+    <div class="w-auto p-3">
+      <div class="card {{ .Get "type" }} mb-3">
+        <div class="row"> <!-- Create a row with no gutters for a seamless look -->
+          <div class="col-md-3 d-flex align-items-center"> <!-- Adjust size as needed -->
+            <div class="card-header bg-transparent border-bottom-0">
+              <h4>{{ .Get "header" }}</h4>
+            </div>
+            </div>
+        <div class="col md-6 d-flex align-items-center w-100 m-3">
+              <p class="card-text">{{ .Inner | markdownify }}</p> <!-- Card content -->
+          </div>
+          <div class="col-md-3 d-flex align-items-center w-100 m-3">
+            <div class="card-body w-100">
+            <img src="{{ .Get "src" }}" class="card-img" alt="{{ .Get "alt" }}"> <!-- Card image -->
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
-</div>
+  </div>
