--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,10 +40,40 @@
     {{ block "main" . }}
     {{ end }}
   </main>
-  <footer class="text-muted small text-center p-3">
-    {{ block "footer" . }}
-    {{ end }}
-  </footer>
-</body>
+<div class="container">
+  <footer class="row row-cols-3 py-3 my-5">
+    <div class="col">
+      <a href="/" class="mb-3 link-dark text-decoration-none">
+  <a class="navbar-brand" href="../..">
+    <img src="https://pdog.no/favicon.png" width="30" height="30" class="d-inline-block align-top mr-1" alt="">
+    pdog.no
+  </a>
+      </a>
+      <br>
+      Hei! Jeg skriver om produktivitet, datatips, regneark, digitale borgere og mye mer.
+      Her finner du også noen utvalgte oppskrifter og en samling av andre prosjekter jeg jobber med.
+    </div>
+
+    <div class="col">
+<center>      <h5></h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="../tilbakemeldinger" class="nav-link p-0 text-dark">Gi en tilbakemelding</a></li>
+        <li class="nav-item mb-2"><a href="../finansiering" class="nav-link p-0 text-dark">Støtt nettsiden</a></li>
+        <li class="nav-item mb-2"><a href="../personvern" class="nav-link p-0 text-dark">Personvernerklæring</a></li>
+        <li class="nav-item mb-2"><a href="../lisens" class="nav-link p-0 text-dark">Lisensier innhold</a></li>
+      </ul></center>
+    </div>
+
+    <div class="col" align="right">
+      <h5></h5>
+      <right>
+Publiseres av: Holstad Helt og Holdent<br>
+Organisasjonsnummer: 915 283 497<br>
+Redaktør: Petter Dog Holstad<br>
+Kontakt: <a href="mailto:hei@pdog.no">hei@pdog.no</a><br>
+Utviklet av: <a href="https://stigjohan.no/">Stig Johan Berggren</a>
+</div>
+</footer>
+</div></body>
 
 </html>
