--- a/layouts/404.html
+++ b/layouts/404.html
@@ -8,29 +8,10 @@
   document.write('<a href="' + document.referrer + '">Gå tilbake til forrige side</a>');
 </script>
 </h4>
-<p>Hvis du vil, kan du sende meg informasjon om hva du trykket på for å komme hit. Da kan jeg rette feilen til senere.</p>
-<form method="POST" action="https://www.domeneshop.no/cgi-bin/mailto.cgi" accept-charset="utf-8">
-  <input type="hidden" name="_to" value="feedback@pdog.no">
-  <input type="hidden" name="_from" value="feedback@pdog.no">
-  <input type="hidden" name="_subject" value="Tilbakemelding">
-  <input type="hidden" name="_resulturl" value="http://pdog.no/skjemasvar">
 
-  <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <span class="input-group-text" id="basic-addon1">Din e-postadresse</span>
-    </div>
-    <input type="text" name="epost" class="form-control" placeholder="eksempel@pdog.no" aria-label="Username" aria-describedby="basic-addon1">
-  </div>
-
-  <div class="input-group">
-    <div class="input-group-prepend">
-      <span class="input-group-text">Hva vil du si?</span>
-    </div>
-    <textarea name="henvendelse" class="form-control" aria-label="With textarea"></textarea>
-    <br><br><br>
-    <button type=submit class="btn btn-primary">Send inn</button>
-  </div>
-</form>
+Hvis du havnet her fordi du trykket på en lenke, send gjerne informasjon om hvor du fant denne
+lenken til meg. Du kan gjerne bruke følgende e-postadresse:
+<a href="mailto:404@pdog.no">404@pdog.no</a>.
 
       </div>
 {{ end }}
