--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,15 +7,5 @@
 {{ end }}
 
 {{ define "footer" }}
-<p>
-<p>
-<a href="../tilbakemeldinger">Gi en tilbakemelding</a> • 
-<a href="../finansiering">Støtt nettsiden</a><br>
-<a href="../personvern">Personvernserklæring</a> • 
-<a href="../lisens">Lisensier innhold</a> • 
-<a href="../kontaktinfo">Kontaktinformasjon</a>
-<br>Nettsiden er utviklet av <a href="https://stigjohan.no" target="_blank">Stig Johan Berggren</a> med flere
-<br>Redaktør: Petter Dog Holstad
-</p>
-</p>
+<p>Heisann</p>
 {{ end }}
