--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, shrink-to-fit=no, initial-scale=1" name="viewport">
   <meta content="" name="description">
-  <meta content="Petter Holstad" name="author">
+  <meta content="Petter Dog Holstad" name="author">
 
-  <title>pdog.no</title>
+  <title>petter.dog</title>
 
   <link rel="icon" href="/favicon.png">
   <link href="/style.css" rel="stylesheet">
@@ -42,42 +42,10 @@
   </main>
 </div></body>
 
-<footer class="bg-light text-center text-lg-start">
+  <footer class="text-muted small text-center p-3">
 <hr>
-  <div class="container p-4">
-    <div class="row">
-      <!-- About text -->
-      <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-        <p>
-pdog.no er den personlige nettsiden til Petter Dog Holstad, som samler prosjekter, tanker, ideer
-konsepter, innhold og liknende jeg skaper, publiserer og vil dele med verden.</p>
-      </div>
-
-      <!-- Links -->
-      <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
-
-            <a href="../tilbakemeldinger" class="text-dark">Tilbakemeldinger</a><br>
-            <a href="../finansiering" class="text-dark">Støtt nettsiden</a><br>
-            <a href="../personvern" class="text-dark">Personvernerklæring</a><br>
-            <a href="../lisens" class="text-dark">Lisensier innhold</a>
-      </div>
-
-      <!-- Company Information -->
-      <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-        <p>
-          Nettsiden utgis av <a href="../hhh">Holstad Helt og Holdent</a> med 
-          organisasjonsnummer: 915 283 497. Redaktør er Petter Dog Holstad. E-post:
-          <a href="mailto:hei@pdog.no">hei@pdog.no</a>.<br>
-Nettsiden er utviklet av: <a href="https://stigjohan.no">Stig Johan Berggren</a>
-</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-<img src="/favicon.png" height="30">  </div>
+<img src="../favicon.png" height="20"> Nettsiden er utviklet av <a href="https://petter.dog/">Petter Dog Holstad</a> og <a href="https://stigjohan.no/">Stig Johan Berggren</a>.
+<a href="../kontaktinfo">Kontakt meg.</a>
 </footer>
-
 
 </html>
