--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-light">
   <a class="navbar-brand" href="../..">
     <img src="https://pdog.no/favicon.png" width="30" height="30" class="d-inline-block align-top mr-1" alt="">
-    pdog.no
-  </a>
+petter.dog  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav"
     aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
