Fikser Hugo-problemer

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <!-- {{ partial "sidebar.html" .Site }} -->
+  <!-- {{ partial "sidebar.html" . }} -->
   {{ with .Params.subtitle }}
     <span class="subtitle">{{.}}</span>
   {{ end }}
