Oppdater kommentar for Bootstrap-avhengigheter

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
 
   <script src="https://kit.fontawesome.com/72ae453d62.js" crossorigin="anonymous"></script>
 
-  <!-- Bootstrap -->
+  <!-- Bootstrap 4.5 med jQuery og Popper -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
